# wikforge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250101_0001_001_initial_schema.py
backend/app/: main.py
backend/app/api/: admin_dictionaries.py  admin_monitoring.py  admin_profiles.py  admin_reviews.py  admin_universal_parser.py  admin_users.py  auth.py  documents.py  feedback.py  health.py  ik_dict.py  permissions.py  qa.py  rag.py  search.py
backend/app/core/: celery_app.py  config.py  database.py  exceptions.py  logging.py  minio.py  opensearch.py  qdrant.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  document_profile.py  document_review.py  document_tag.py  domain_dictionary.py  folder.py  parser_plugin_config.py  permission.py  profile_version.py  search_feedback.py  space.py  user.py
backend/app/scripts/: init_db.py
backend/app/services/: auth_service.py  chunker.py  conversation_service.py  dictionary_service.py  document_processor.py  document_service.py  domain_dictionary.py  embedding_service.py  feedback_service.py  hyde_service.py  indexing_service.py  llm_gateway.py  permission_service.py  profile_candidate_service.py  profile_matcher.py  profile_version_service.py  quality_scorer.py  query_enhancer.py  query_rewriter.py  rag_engine.py  rag_service.py  review_queue.py  search_service.py  subquery_decomposer.py  universal_parser.py  universal_parser_trigger.py  upload_service.py
backend/app/services/parsers/: __init__.py  base.py  docx_parser.py  html_parser.py  pdf_parser.py  pptx_parser.py  registry.py  text_parser.py
backend/app/tasks/: permission_tasks.py  pipeline.py
backend/docs/: plugin-development.md
backend/eval/: __init__.py  metrics.py  qa_pairs.json  run_eval.py
backend/scripts/: api-entrypoint.sh
backend/tests/: _permission_helpers.py  conftest.py  test_admin_dictionaries.py  test_admin_dictionaries_import_export.py  test_admin_dictionaries_synonyms.py  test_admin_dictionaries_terms.py  test_admin_profiles.py  test_admin_profiles_candidates.py  test_admin_reviews_correct.py  test_admin_reviews_list.py  test_admin_reviews_preview.py  test_admin_reviews_samples.py  test_admin_universal_parser.py  test_apply_suggestions.py  test_auth.py  test_auth_lockout.py  test_auth_login.py  test_auth_middleware.py  test_auth_oidc.py  test_auth_refresh.py  test_auth_register.py  test_candidate_extraction.py  test_chunker.py  test_conversation_expiry.py  test_conversation_service.py  test_dictionary.py  test_dictionary_integration.py  test_dictionary_toggle.py  test_document_processor.py  test_documents.py  test_domain_dictionary_models.py  test_embedding_service.py  test_embedding_sparse.py  test_error_pattern_detection.py  test_eval_metrics.py  test_feedback_aggregation.py  test_feedback_api.py  test_feedback_issue_categories.py  test_feedback_loop_integration.py  test_feedback_storage.py  (+62 more)
backend/tests/fixtures/: __init__.py
backend/tests/fixtures/universal_parser/: __init__.py
backend/tests/integration/: README.md  __init__.py  conftest.py  test_e2e_document_import.py  test_e2e_permissions.py  test_e2e_rag.py  test_e2e_search.py  test_performance.py
docs/: ROADMAP.md  deploy.md
frontend/: .gitignore  Dockerfile  next.config.mjs  nginx.conf  package-lock.json  (+3 more)
(+79 files in other folders)
