[project]
name = "wikforge"
version = "0.1.0"
description = "Enterprise knowledge base system with RAG capabilities"
requires-python = ">=3.11"
dependencies = [
    # ---------- Web framework ----------
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.34,<0.36",
    "starlette>=0.41,<0.48",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "email-validator>=2.2,<3.0",
    "python-multipart>=0.0.20,<0.1",

    # ---------- Database / ORM ----------
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30,<0.31",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.14,<2.0",

    # ---------- Cache / Queue ----------
    "redis>=5.2,<6.0",
    "celery[redis]>=5.4,<6.0",

    # ---------- Auth ----------
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.2,<5.0",
    "authlib>=1.4,<2.0",

    # ---------- Object storage ----------
    "boto3>=1.36,<2.0",
    "minio>=7.2,<8.0",

    # ---------- Search engines ----------
    "opensearch-py>=2.8,<3.0",
    "qdrant-client>=1.12,<2.0",

    # ---------- Document parsing ----------
    "marker-pdf>=1.3,<2.0",
    "pypdfium2>=4.30,<5.0",
    "pymupdf>=1.24,<2.0",
    "pypdf>=5.1,<6.0",
    "pdf2image>=1.17,<2.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=1.0,<2.0",
    "trafilatura>=2.0,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.3,<6.0",
    "pillow>=10.4,<12.0",
    "pytesseract>=0.3.13,<0.4",
    "markdown>=3.7,<4.0",

    # ---------- NLP / Chunking ----------
    "tiktoken>=0.8,<1.0",
    "langchain-text-splitters>=0.3,<0.4",
    "jieba>=0.42,<0.43",

    # ---------- LLM gateway ----------
    "litellm>=1.55,<2.0",

    # ---------- HTTP clients ----------
    "httpx>=0.28,<0.29",
    "requests>=2.32,<3.0",
    "aiofiles>=24.1,<25.0",

    # ---------- Utilities ----------
    "python-dotenv>=1.0,<2.0",
    "tenacity>=9.0,<10.0",
    "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
    # Test framework
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6.0,<7.0",
    "hypothesis>=6.122,<7.0",
    # API testing client
    "httpx>=0.28,<0.29",
    # Optional: container-based integration tests
    "testcontainers>=4.9,<5.0",
    # Lint / type-check
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]
monitoring = [
    # Celery monitoring dashboard (optional, run as separate service)
    "flower>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 任务 25.10：按需启用覆盖率
# 用法：pytest --cov=app --cov-report=term-missing --cov-report=html
addopts = ""
markers = [
    "integration: 集成测试，需 --run-integration 启用",
    "benchmark: 性能基准测试",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "tests/*",
    "alembic/*",
    "app/scripts/*",
    "**/__init__.py",
]

[tool.coverage.report]
# 任务 25.10：覆盖率门槛（先放宽，后续可逐步收紧）
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
strict = true
